--- a/public/index.html
+++ b/public/index.html
@@ -4,7 +4,9 @@
     <meta charset="utf-8" />
     <link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <meta name="theme-color" content="#000000" />
+    <meta name="theme-color" content="#06375C" media="(prefers-color-scheme: dark)"/>
+    <meta name="theme-color" content="#0063AD"/>
+
     <meta
       name="description"
       content="Web site created using create-react-app"
@@ -24,11 +26,12 @@
       work correctly both with client-side routing and a non-root public URL.
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
-    <title>React App</title>
+    <title>Cotizador v2.0 Laboratorio Nova</title>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
     <div id="root"></div>
+    <div id="cotizador"></div>
     <!--
       This HTML file is a template.
       If you open it directly in the browser, you will see an empty page.
